[package]
name = "micontrol_canbus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
can-dbc = { git = "https://github.com/marcelbuesing/can-dbc.git", branch = "dev" }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
socketcan = { version = "3.5.0", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
