[package]
name = "micontrol_canbus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
can-dbc = { git = "https://github.com/marcelbuesing/can-dbc.git", branch = "dev" }
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
redis = { version = "0.32.0", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
socketcan = { version = "3.5.0", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", branch = "main", default-features = false }
once_cell = "1.21.3"
tracing = "0.1.41"
