[package]
name = "micontrol_canbus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
can-dbc = { git = "https://github.com/marcelbuesing/can-dbc.git", branch = "dev" }
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
socketcan = { version = "3.5.0", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", branch = "main", default-features = false }
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bitvec = "1.0.1"
toml = "0.9.7"
chrono = { version = "0.4.38", features = ["serde"] }
